--- a/index.html
+++ b/index.html
@@ -2,22 +2,41 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
-  <title>검사기 체크시트</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>검사기 일상점검 체크시트</title>
   <style>
     body {
       font-family: Arial, sans-serif;
+      margin: 0;
       padding: 20px;
-      font-size: 18px;
+      background-color: #f9f9f9;
+      box-sizing: border-box;
+    }
+    h2 {
+      text-align: center;
+      font-size: 20px;
+      margin-bottom: 20px;
+    }
+    form {
+      width: 100%;
+      max-width: 600px;
+      margin: 0 auto;
+      background: #fff;
+      padding: 20px;
+      border-radius: 8px;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+      box-sizing: border-box;
     }
     table {
-      width: 50%;
+      width: 100%;
       border-collapse: collapse;
-      text-align: left;
       font-size: 18px;
+      margin-bottom: 16px;
     }
     th, td {
       border: 1px solid #444;
       padding: 8px;
+      box-sizing: border-box;
     }
     th {
       background-color: #f0f0f0;
@@ -28,29 +47,36 @@
       background-color: #dbefff;
       text-align: left;
     }
-    label {
-      margin-right: 10px;
-    }
-    input, select, textarea {
+    input[type="date"],
+    input[type="time"],
+    select,
+    textarea,
+    input[type="text"] {
+      width: 100%;
       font-size: 18px;
+      padding: 6px;
+      margin: 4px 0 8px;
+      box-sizing: border-box;
+    }
+    textarea {
+      height: 100px;
+      resize: vertical;
     }
     .submit-button {
-      margin-top: 20px;
-      padding: 10px 20px;
+      width: 100%;
+      padding: 12px;
       font-size: 18px;
-    }
-    #memo {
-      width: 50%;
-      height: 100px;
-      font-size: 18px;
-      margin-top: 20px;
+      background-color: #007BFF;
+      color: #fff;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+      box-sizing: border-box;
     }
   </style>
 </head>
 <body>
-
   <h2>검사기 체크시트</h2>
-
   <form id="inspectionForm">
     <table>
       <tr>
@@ -64,33 +90,33 @@
       <tr>
         <th>검사자</th>
         <td>
-          <input type="text" id="inspector" name="inspector" required list="inspectorList">
-          <datalist id="inspectorList">
-            <option value="강병주">
-            <option value="오윤정">
-            <option value="김상기">
-            <option value="허미정">
-            <option value="오현민">
-            <option value="문수진">
-            <option value="김미선">
-            <option value="송경옥">
-            <option value="권혜영">
-            <option value="김갑선">
-            <option value="진정화">
-            <option value="이유선">
-            <option value="강란희">
-            <option value="차찬이">
-            <option value="서성자">
-            <option value="전귀옥">
-            <option value="양혜정">
-          </datalist>
+          <select id="inspector" name="inspector" required>
+            <option value="" disabled selected>선택하세요</option>
+            <option value="강병주">강병주</option>
+            <option value="오윤정">오윤정</option>
+            <option value="김상기">김상기</option>
+            <option value="허미정">허미정</option>
+            <option value="오현민">오현민</option>
+            <option value="문수진">문수진</option>
+            <option value="김미선">김미선</option>
+            <option value="송경옥">송경옥</option>
+            <option value="권혜영">권혜영</option>
+            <option value="김갑선">김갑선</option>
+            <option value="진정화">진정화</option>
+            <option value="이유선">이유선</option>
+            <option value="강란희">강란희</option>
+            <option value="차찬이">차찬이</option>
+            <option value="서성자">서성자</option>
+            <option value="전귀옥">전귀옥</option>
+            <option value="양혜정">양혜정</option>
+          </select>
         </td>
       </tr>
       <tr>
         <th>검사기</th>
         <td>
           <select id="machine" name="machine" required>
-            <option value="">선택</option>
+            <option value="" disabled selected>선택하세요</option>
             <option value="3호기">3호기</option>
             <option value="4호기">4호기</option>
             <option value="5호기">5호기</option>
@@ -115,29 +141,21 @@
       <tr><td>배출부 인식</td><td><label><input type="radio" name="chk_out" value="OK" required> OK</label> <label><input type="radio" name="chk_out" value="NG"> NG</label></td></tr>
       <tr><td>불량샘플 상태</td><td><label><input type="radio" name="chk_sample" value="OK" required> OK</label> <label><input type="radio" name="chk_sample" value="NG"> NG</label></td></tr>
     </table>
-
-    <label for="memo"><strong>비고:</strong></label><br>
+    <label for="memo"><strong>비고:</strong></label>
     <textarea id="memo" name="memo" placeholder="특이사항 또는 메모를 입력하세요"></textarea>
-
-    <br>
     <button type="submit" class="submit-button">제출</button>
   </form>
-
   <script>
     function setDateTimeNow() {
       const now = new Date();
       document.getElementById("checkDate").value = now.toISOString().split("T")[0];
-      document.getElementById("checkTime").value = now.toTimeString().split(":" ).slice(0, 2).join(":" );
+      document.getElementById("checkTime").value = now.toTimeString().split(":").slice(0,2).join(":");
     }
-
     window.addEventListener("DOMContentLoaded", setDateTimeNow);
-
-    document.getElementById("inspectionForm").addEventListener("submit", function (e) {
+    document.getElementById("inspectionForm").addEventListener("submit", function(e) {
       e.preventDefault();
-
       const form = e.target;
       const inspectorValue = form.inspector.value;
-
       const data = {
         date: form.checkDate.value,
         time: form.checkTime.value,
@@ -156,25 +174,15 @@
         },
         memo: form.memo.value
       };
-
       fetch("https://script.google.com/macros/s/AKfycbyfPgQ9cmOwPszT5AL7nWy9r6EcmEr1EyL55SRHZby3mr8M1TKcyXA0WF43p1nqI3KVvA/exec", {
         method: "POST",
         mode: "no-cors",
-        headers: {
-          "Content-Type": "application/json"
-        },
+        headers: {"Content-Type": "application/json"},
         body: JSON.stringify(data)
       })
-      .then(() => {
-        alert("제출 완료되었습니다.");
-        const inspectorValuePreserved = form.inspector.value;
-        form.reset();
-        setDateTimeNow();
-        form.inspector.value = inspectorValuePreserved;
-      })
-      .catch((error) => alert("저장 실패: " + error));
+      .then(() => { alert("제출 완료되었습니다."); const prev = form.inspector.value; form.reset(); setDateTimeNow(); form.inspector.value = prev; })
+      .catch(err => alert("저장 실패: " + err));
     });
   </script>
-
 </body>
 </html>
