--- a/index.html
+++ b/index.html
@@ -121,16 +121,18 @@
     
     #closePreview {
       position: absolute;
-      top: 10px;
-      right: 10px;
+      top: -15px;
+      right: -15px;
       background: #dc3545;
       color: white;
       border: none;
       border-radius: 50%;
-      width: 30px;
-      height: 30px;
+      width: 40px;
+      height: 40px;
       cursor: pointer;
-      font-size: 16px;
+      font-size: 18px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.3);
+      z-index: 1001;
     }
     
     .disabled-radio {
