--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
           <label><input type="radio" name="chk_chain" value="OK" class="disabled-radio" disabled> OK</label> 
           <label><input type="radio" name="chk_chain" value="NG" class="disabled-radio" disabled> NG</label>
           <button type="button" class="qr-scan-button" onclick="scanQRCode('qrResult')">QR 스캔</button>
-          <span id="qrStatus" class="qr-status qr-required">QR코드 "2" 스캔 필요</span>
+          <span id="qrStatus" class="qr-status qr-required">QR "2" 스캔 필요</span>
           <input type="hidden" id="qrResult" name="qrResult">
         </td>
       </tr>
@@ -311,7 +311,7 @@
           radio.classList.remove('disabled-radio');
           radio.required = true;
         });
-        qrStatus.textContent = `QR코드 "${qrValue}" 인증 완료`;
+        qrStatus.textContent = `QR "${qrValue}" 인증 완료`;
         qrStatus.className = 'qr-status qr-success';
       } else {
         // QR코드가 "2"가 아닌 경우 비활성화 유지
@@ -321,7 +321,7 @@
           radio.checked = false;
           radio.required = false;
         });
-        qrStatus.textContent = `잘못된 QR코드 "${qrValue}". "2"가 필요합니다.`;
+        qrStatus.textContent = `잘못된 QR "${qrValue}". "2"가 필요합니다.`;
         qrStatus.className = 'qr-status qr-required';
       }
     }
@@ -333,7 +333,7 @@
       const chainChecked = Array.from(chainRadios).some(radio => radio.checked);
       
       if (qrResult !== "2") {
-        alert('기종전환시 잔량없음 항목을 위해 QR코드 "2"를 스캔해주세요.');
+        alert('기종전환시 잔량없음 항목을 위해 QR "2"를 스캔해주세요.');
         return false;
       }
       
@@ -401,7 +401,7 @@
           radio.classList.add('disabled-radio');
           radio.required = false;
         });
-        qrStatus.textContent = 'QR코드 "2" 스캔 필요';
+        qrStatus.textContent = 'QR "2" 스캔 필요';
         qrStatus.className = 'qr-status qr-required';
       })
       .catch(err => alert("저장 실패: " + err));
