--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
           radio.classList.remove('disabled-radio');
           radio.required = true;
         });
-        qrStatus.textContent = `QR "${qrValue}" 인증 완료`;
+        qrStatus.textContent = `QR "${qrValue}"완료`;
         qrStatus.className = 'qr-status qr-success';
       } else {
         // QR코드가 "2"가 아닌 경우 비활성화 유지
